# BroccoliPlanter

./: .gitignore  .gitmodules  AGENTS.md  BroccoliPlanter.code-workspace.bak  BroccoliPlanter.slnx  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
Documents/: git.md
Game/: .clang-format  CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  vcpkg.json
Game/Resources/: Resources.md
Game/Source/: GameMain.cpp  include.md
